<resources>
    <string name="app_name" translatable="false">SmartPark</string>
    <string name="home" translatable="false">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="riepilogo_delle_tue_attivit">Summary of your activities</string>
    <string name="gestisci_le_tue_autovetture">Manage your vehicles</string>
    <string name="visualizza_i_tuoi_movimenti">View your movements</string>
    <string name="continua">Continue</string>
    <string name="conferma">Confirm</string>
    <string name="scegli_il_tuo_ruolo">Choose your role</string>
    <string name="gestore">Manager</string>
    <string name="utente">User</string>
    <string name="user_explanation">SmartPark is an application that helps manage parking automatically. The application uses advanced technologies such as Automatic License Plate Recognition to offer stress-free and easy parking experience.</string>
    <string name="admin_explanation">To manage the availability of parking spaces, SmartPark API usesALPR technology. This technology allows parking managers to detect the presence or absence of a vehicle in the parking lot, making real-time management of parking space availability possible.</string>
    <string name="inserisci_i_tuoi_dati">Enter your data</string>
    <string name="tua_targa">Your license plate</string>
    <string name="telefono">Phone</string>
    <string name="parcheggi">Parking spots</string>
    <string name="auto">Cars</string>
    <string name="pagamenti_mancanti">Missing payments</string>
    <string name="totale">Total</string>
    <string name="questo_mese">This month</string>
    <string name="ultimi_movimenti">Last movements</string>
    <string name="auto_online">Online cars</string>
    <string name="loading">Loading...</string>
    <string name="warning">Warning</string>
    <string name="loading_please_do_not_close_your_app">Loading, please, do not close your app</string>
    <string name="login_error">Login error</string>

    <string name="pagamenti_regolari">Regular payments</string>
    <string name="logout">Logout</string>
    <string name="add_car">Add your vehicle</string>
    <string name="nessuna_transazione_trovata">No transactions found</string>
    <string name="da_pagare">To pay</string>
    <string name="confermato">Confirmed</string>
    <string name="pagamento_non_confermato">Payment not confirmed</string>
    <string name="il_tuo_nuovo_veicolo">Your new vehicle</string>
    <string name="car_insert_disclaimer">Enter your license plate here</string>
    <string name="configurazione">Configuration</string>
    <string name="benvenuto">Welcome</string>
    <string name="seleziona_il_tuo_parcheggio">Select your parking lot</string>
    <string name="crea_una_nuova_zona">Create a new zone</string>
    <string name="nome_parcheggio">Parking lot name</string>
    <string name="nome_del_tuo_parcheggio">Your parking lot name</string>
    <string name="numero_dei_lot">Number of spots</string>
    <string name="prezzo_all_ora">Price per hour (€)</string>
    <string name="annulla">Cancel</string>
    <string name="nome_zona">Zone name</string>
    <string name="nome_della_tua_zona">Your zone name</string>
    <string name="descrizione">Description</string>
    <string name="scrivi_la_tua_descrizione">Write your description</string>
    <string name="select_zone">Seleziona la tua zona</string>
    <string name="select_zone_subheader">Devi selezionare almeno un elemento</string>
    <string name="select_park">Seleziona il tuo parco</string>
    <string name="select_park_subheader">Devi scegliere il tuo parco</string>
    <string name="seleziona">Select...</string>
    <string name="seleziona_la_tua_zona">Select your zone</string>
    <string name="crea_un_nuovo_park">Create a new parking lot</string>
    <string name="no_park">Nessun parcheggio disponibile, creane uno nuovo</string>
    <string name="no_zone">Nessuna zona disponibile, creane una nuova</string>
    <string name="inserisci_il_nome_qui">Enter the name here</string>

    <string name="la_descrizione_qui">Description here</string>
    <string name="info">Info</string>
    <string name="operazione_ok">Operation successful</string>
    <string name="nessun_account_collegato">No connected account</string>
    <string name="nessun_account_disclaimer">To properly use the service, it is necessary to create an account. This is mandatory because the account provides a way to authenticate and verify the user\'s identity.</string>
    <string name="car_debit">Unauthorized vehicle</string>
    <string name="car_debit_disclaimer">At the moment, the owner of the vehicle has not paid the debt and therefore cannot be authorized to enter the parking lot until full payment is made.</string>
    <string name="errore_generico">Generic error</string>
    <string name="generic_error_disclaimer">We are very sorry, but a generic error has occurred while executing your request. Please try again later. Thank you for your patience and understanding, and we apologize for any inconvenience caused.</string>
    <string name="payment_details">Payment details</string>
    <string name="paga">"Pay %1$s"</string>

    <string name="benvenuto_1">SmartPark è un\'applicazione intelligente progettata per semplificare e automatizzare la gestione dei parcheggi. L\'applicazione consente ai conducenti di prenotare un posto auto con facilità, mentre i gestori del parcheggio possono monitorare e gestire i posti disponibili in tempo reale.</string>
    <string name="benvenuto_2">Smart Park è una soluzione tecnologica che consente di semplificare la gestione dei parcheggi attraverso l\'utilizzo di sensori, software e applicazioni mobili.</string>
    <string name="benvenuto_3">L\'uso di Smart Park può effettivamente semplificare la gestione dei parcheggi, riducendo il tempo necessario per la ricerca di un posto auto e migliorando l\'efficienza nella gestione degli spazi disponibili.</string>
</resources>