<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/Subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_zona" />

    <EditText
        android:id="@+id/zonename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/background_edittext"
        android:hint="@string/nome_della_tua_zona"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp" />

    <TextView
        style="@style/Subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/descrizione" />

    <EditText
        android:id="@+id/lots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/background_edittext"
        android:hint="@string/scrivi_la_tua_descrizione"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm"
        style="@style/Theme.Button.Green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/conferma" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/annulla"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>