<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/Subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operazione_ok" />


    <LinearLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/baseline_check_24"
            app:tint="@color/green" />

    </LinearLayout>

    <TextView
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/conferma"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>