<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_parcheggio" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/Subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_parcheggio" />


    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_box"
        android:backgroundTint="@color/action"
        android:choiceMode="singleChoice"
        tools:listitem="@android:layout/simple_list_item_single_choice" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm"
        style="@style/Theme.Button.Green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/conferma" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/annulla"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>