<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:orientation="vertical"
    app:cardCornerRadius="24dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/warning"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/loading_please_do_not_close_your_app"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/background_text_input"
            android:hint="Input"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:paddingHorizontal="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Theme.Button.Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/conferma" />
    </LinearLayout>

</androidx.cardview.widget.CardView>